fix alignement in list page

--- a/public/css/list.css
+++ b/public/css/list.css
@@ -16,9 +16,6 @@
     margin-bottom: 1em;
 }
 
-.controls {
-}
-
 .map {
     position: absolute;
     width: 100%; height: 100%;
@@ -26,7 +23,8 @@
 }
 
 .title {
-    height: 2em;
+    *margin-top: -1em; /* in ie <=7, .control-link margin-bottom "pushes" .title */
+    height: 32px;
     clear: left;
 }
 
@@ -69,3 +67,9 @@
     border-radius: 5px;
 }
 
+#other-language {
+    margin: 10px 10px 20px 20px;
+    /* .item: 108px +.title: 32px + margin-bottom: 10px => 150px */
+    /* margin: 30px + padding: 10px => height = 150 - 40 */
+    height: 110px;
+}
